--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,9 @@
-aiofiles==0.6.0
-aiohttp==3.7.4.post0
-aiosqlite==0.17.0
-async-generator==1.10
-async-timeout==3.0.1
-asyncio-extras==1.3.2
-asyncpraw==7.3.0
-asyncprawcore==2.2.0
-attrs==21.2.0
-beautifulsoup4==4.9.3
-bfi==1.0.2
-bs4==0.0.1
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-cycler==0.10.0
-discord==1.7.3
-discord.py==1.7.3
-Flask==2.0.1
-Flask-Cors==3.0.10
-Flask-FlatPages==0.8.1
-Frozen-Flask==0.18
-idna==2.10
-importlib-metadata==6.8.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
-joblib==1.0.1
-kiwisolver==1.3.1
-loguru==0.5.3
-lxml==4.6.4
-Markdown==3.4.4
-MarkupSafe==2.0.1
-matplotlib==3.4.1
-multidict==5.1.0
-nltk==3.6.2
-numpy==1.20.2
-pandas==1.2.4
-pandas-datareader==0.10.0
-Pillow==8.2.0
-praw==7.3.0
-prawcore==2.2.0
-pygame==2.1.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==6.0.1
-regex==2021.4.4
-requests==2.25.1
-six==1.15.0
-soupsieve==2.2.1
-textblob==0.15.3
-toml==0.10.2
-tqdm==4.60.0
-typing-extensions==3.10.0.0
-update-checker==0.18.0
-urllib3==1.26.4
-vaderSentiment==3.3.2
-websocket-client==1.1.0
-Werkzeug==2.0.1
-yarl==1.6.3
-zipp==3.16.2
+blinker==1.7.0
+click==8.1.7
+Flask==3.0.3
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+Werkzeug==3.0.2
+zipp==3.18.1
